<resources>
    <string name="app_name">Practica02</string>
    <string name="btnexample">Button</string>
    <string name="header">Header</string>
    <string name="strTitulo">Titulo</string>
    <string name="strDirector">Director</string>
    <string name="strDuracion">Duracion</string>
    <string name="strGenero">Genero</string>
    <string name="strCalificacion">Calificacion</string>
    <string name="btnGuardar">Guardar</string>
    <string name="strNoRegistros">Sin registros</string>
    <string name="strEditar">Editar</string>
    <string name="Borrar">Borrar</string>
    <!--    Genero Pelicula-->
    <string name="gen01">Accion</string>
    <string name="gen02">Ficcion</string>
    <string name="gen03">Comedia</string>
    <string name="gen04">Drama</string>
    <string name="gen05">Infantil</string>
    <string name="version">1.0</string>
    <string name="created_by">jcmonin83</string>
    <string-array name="generoOptions">
        <item>@string/gen01</item>
        <item>@string/gen02</item>
        <item>@string/gen03</item>
        <item>@string/gen04</item>
        <item>@string/gen05</item>
    </string-array>

</resources>